# GoldQuant

./: .eastmoney.header  .env.example  .gitignore  README.md  evalute_gpt5.5.md  gpt5.5_eva.md  main.py  main_legacy.py  pyproject.toml  requirements.txt  result.md  result.txt  routes_after.txt  routes_before.txt  run.ps1  run.sh  strategy.md
.claude/: settings.local.json
app/: __init__.py  __main__.py  main.py
app/api/: deps.py
app/core/: __init__.py  config.py  eastmoney_headers.py  exception_handlers.py  proxy.py  ths_headers.py
app/scheduling/: __init__.py  quant_scheduler.py
app/schemas/: __init__.py  ak_openapi.py  ak_table.py  response.py
app/utils/: 52etf_util.py  ak_response.py  common_util.py  dataframe.py  dfcf_util.py  etf52_util.py  http_util.py  iwencai_hexin_util.py  llm_client.py  news_market_summary.py  quant_archive.py  quant_market_enrich.py  (+2 more)
data/: a.json  during_market  during_market.json  news  news.json  post_market_evening  post_market_evening.json  post_market_lunch  post_market_lunch.json  pre_market  pre_market.json  问财.json
quant/: __init__.py  __main__.py  cli.py  config.py  constants.py  data_fetch.py  data_filter.py  data_io.py  data_source.py  features.py  feishu.py  llm.py  main.py  market_state.py  models.py  orchestrator.py  parsers.py  paths.py  pipeline.py  post_process.py  prompts.py  push_format.py  replay.py  rules_config.yml  signals.py  state_update.py  strategy.json  strategy.md  strategy.md.bak  strategy.yml  strategy_loader.py  trade_executor.py  trading_hours.py
tools/: diff_route_files.py  enum_routes.py
(+113 files in other folders)
